--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
 
     </head>
-    <body style="background:url('beach.jpg'); background-size:cover;">
+    <body style="background:url('beach.jpg')  no-repeat center center fixed;   -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;">
 <h1 id="Rosie"> Rosie The Beach Finder </h1>
 <h1 id="click"> Click on the continent you would like to explore</h1>
 <div id="explore">
-<p style="color:#660033; text-align:center; font-size:20px;">*hint - don't forget the Pacific islands! ;)</p>
+<p style="color:#660033; text-align:center; font-size:20px; width:100% !important;">*hint - don't forget the Pacific islands! ;)</p>
 </div>
+<br>
 <img id="mapworld" src="mapworld2.gif" alt="" usemap="#Map" style="width: 582px; height:294px;" />
 <map name="Map" id="Map">
     <area href="northamerica.html" shape="rect" coords="267,5,28,129" />
