--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>My Coding Page</title>
+        <title>My Travel Blog</title>
         <script src="index.js"></script>
         <link href="style.css" rel="stylesheet" type="text/css" />
 
