--- a/antarctica.html
+++ b/antarctica.html
@@ -4,7 +4,7 @@
   <body background="antarctica.jpg">
 
     <img src="http://25.media.tumblr.com/tumblr_lzm692bKTP1r5gvg1o1_400.gif">
-    <p style="text-align:center;">You must be crazy or a penguin to want to come here!</p>
+    <p style="text-align:center; width:100%">You must be crazy or a penguin to want to come here!</p>
   </body>
 
 <style>
