--- a/asia.html
+++ b/asia.html
@@ -1,24 +1,42 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <H1 id=asia> ASIA</h1>
 
+<iframe id="upbeat" width="560" height="315" src="https://www.youtube.com/embed/ZwioDTAjL_8?autoplay=1" frameborder="1" allowfullscreen></iframe>
 
   <h2> ISRAEL: </h2>
   <img id="israel" src="Israel.jpg">
-  
+  <br><br>
+  <p>Israel is a small country in the Middle East about the size of the state of New Jersey. The country has a diverse climate with snowy mountains in the north and the hot desert in the south. Jordan, Syria, and the Palestinian Authority all border Israel to the east. Lebanon serves as the northern border and Egypt borders in the south. It's a very spiritual and holy country for the Jewish people. It has many sites to visit that relate to the history of Jewish People.</p>
+
+  <h2> DUBAI: </h2>
+  <img id="dubai" src="dubai.jpg">
+  <br><br>
+  <p>Dubai is situated on the Persian Gulf coast of the United Arab Emirates and is roughly at sea level.With year-round sunshine, intriguing deserts, beautiful beaches, luxurious hotels and shopping malls, fascinating heritage attractions and a thriving business community, Dubai receives millions of leisure and business visitors each year from around the world.Dubai has a warm, sunny climate.</p>
+
   <h2> BRUNEI: </h2>
   <img id="brunei" src="brunei.jpg">
+  <br><br>
+  <p>The small country of Brunei Darussalam is situated on the northwestern edge of the island of Borneo, an island that is also a part of Indonesia and Malaysia.The water wasn’t just lukewarm like Caribbean beaches (or super-cold like east coast beaches), it was hot like a hot tub.  As in, we would get up to hit the air and refresh ourselves, because even though it was a hot day, the air was cooler than the water. </p>
 
   <h2> MALAYSIA: </h2>
   <img id="malaysia" src="malaysia.jpg">
+  <br><br>
+  <p>Rugged mountains reach dramatically for the sky while their rainforest-clad slopes sweep down to floodplains teeming with forest life. Cool highland hideaways roll down to warm, sandy beaches and rich, humid mangroves.Malaysia has dozens of tiny islands on both the east and west coasts that rival the beauty of southern Thailand. Plus, the beaches in Malaysia have the added advantage of being relatively unknown.</p>
 
   <h2> TIMOR-LESTE: </h2>
   <img id="timor" src="timorleste.jpg">
+  <br><br>
+  <p>Diving, whale-watching, trekking, biking, great scenery, stunning mountain driving and beautiful white-sand beaches. East Timor is one of the world's unsung tourism destinations.So, if you want to try something new yet still enjoy the conventional sun, sea and sand with an adventurous twist, come to Timor-Leste!</p>
 
   <h2> PHILIPPINES: </h2>
   <img id="philippines" src="philippines.jpg">
+  <br><br>
+  <p>The Philippines is an archipelago of 7,107 islands and islets located in the southeast coast of Asia.It is a country subdivided into fifteen regions.It has many beatiful and breathtaking beaches, with a vibrant turqoise color.</p>
+  <br><br>
 
 
   <br><br>
   <a href="index.html"><button>Back to Home</button></a>
+  <br><br>
   <br><br>
   </body>
