--- a/australia.html
+++ b/australia.html
@@ -1,19 +1,33 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <H1 id=asia> AUSTRALIA</h1>
 
+<iframe id="beachchill" width="560" height="315" src="https://www.youtube.com/embed/km1AjXF2OcM?autoplay=1" frameborder="1" allowfullscreen></iframe>
+
   <h2> DARWIN: </h2>
   <img id="darwin" src="darwin.jpg">
+  <br><br>
+  <p>Situated on the Timor Sea, Darwin is the largest city in the sparsely populated Northern Territory.In Darwin their are great beaches, including Mindil Beach with the iconic Sunset Markets, the top spots for coastal walks, as well as Galaru for a Territory beach adventure.</p>
 
   <h2> PERTH: </h2>
   <img id="perth" src="perth.jpg">
+  <br><br>
+  <p> Perth is the capital and largest city of the Australia. In Perth you will see beatiful white sand beaches with clear breathtaking water.Cottesloe Beach is Perth’s most iconic beach. A living picture postcard, with its white sand, majestic Norfolk Pines and buzzing boulevard of cafes and bars, Cottesloe is the ideal spot for a swim, surf, snorkel, picnic, sunset drinks, or a fish and chip dinner by the sea.</p>
 
   <h2> MELBOURNE: </h2>
   <img id="melbourne" src="melbourne.jpg">
+  <br><br>
+  <p>Melbourne is located in the south-eastern part of mainland Australia, within the state of Victoria.Relax in the summer sun on calm bay beaches across Melbourne from the popular swimming spots and shoreside diners at St Kilda to the colourful landmark bathing huts at Brighton. Most beaches are patrolled by surf life savers during the warmer months, school and public holidays.</p>
+
 
   <h2> CAIRNS: </h2>
   <img id="cairns" src="cairns.jpg">
+  <br><br>
+  <p>Cairns is an important transport hub in the Far North Queensland region. Located at the base of Cape York Peninsula, it provides important transport links between the Peninsula and Gulf of Carpentaria regions, and the areas to the south of the state.It's also renowned for its beautiful palm tree lined beaches caressed by warm tropical waters. The city of Cairns lives for its northern beaches. They provide a huge amount of the city's tourism, with holiday accommodation to suit absolutely every budget and desires.</p>
+
+
 
   <br><br>
   <a href="index.html"><button>Back to Home</button></a>
+  <br><br>
   <br><br>
 </body>
