--- a/islands.html
+++ b/islands.html
@@ -23,7 +23,7 @@
   <img id="samoa" src="samoa.jpg">
   <br><br>
   <p> The independent country of Samoa consists of the two large islands of Upolu and Savai'i and 8 smaller islands located about halfway between Hawaii and New Zealand in the Polynesian region of the South Pacific.</p>
-  <p> It has beatiful clean beaches</p>
+  <p> It has beatiful clean beaches!</p>
   <br> <br>
   <br> <br>
   <a href="index.html"><button>Back to Home</button></a>
