--- a/northamerica.html
+++ b/northamerica.html
@@ -29,7 +29,7 @@
 <h2> SANTA MONICA: </h2>
 <img id="santamonica" src="santamonica.jpg">
 <br> <br>
-<p> Santa Monica is a beachfront city in western Los Angeles County, California, United States. Situated on Santa Monica Bay, it is bordered on three sides by the city of Los Angeles.</p>
+<p> Santa Monica is a beachfront city in western Los Angeles County, California, United States. Situated on Santa Monica Bay, it is bordered on three sides by the city of Los Angeles.There are many activities to do in Santa Monica such as: walking on the boardwalk, purchasing items,and riding the amusment rides!</p>
 
 <h2> PUNTA CANA: </h2>
 <img id="PUNTA" src="PuntaCana2.jpg">
