--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;">
-<h1 id="Rosie"> Rosie The Beach Finder </h1>
+<h1 id="Rosie"> Travel Blog </h1>
 <h1 id="click"> Click on the continent you would like to explore</h1>
 <div id="explore">
-<p style="color:#660033; text-align:center; font-size:20px; width:100% !important;">*hint - don't forget the Pacific islands! ;)</p>
+<p style="color:#660033; text-align:center; font-size:25px; width:100% !important;">*hint - don't forget the Pacific islands! ;)</p>
 </div>
 <br>
 <img id="mapworld" src="mapworld2.gif" alt="" usemap="#Map" style="width: 582px; height:294px;" />
