--- a/australia.html
+++ b/australia.html
@@ -1,7 +1,7 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <H1 id=asia> AUSTRALIA</h1>
 
-<iframe id="beachchill" width="560" height="315" src="https://www.youtube.com/embed/km1AjXF2OcM?autoplay=1" frameborder="1" allowfullscreen></iframe>
+<iframe id="beachchill" style="display:none;" width="560" height="315" src="https://www.youtube.com/embed/km1AjXF2OcM?autoplay=1" frameborder="1" allowfullscreen></iframe>
 
   <h2> DARWIN: </h2>
   <img id="darwin" src="darwin.jpg">
