--- a/africa.html
+++ b/africa.html
@@ -4,7 +4,7 @@
 <iframe id="africansong" width="560" height="315" src="https://www.youtube.com/embed/leLOg_tRgRE?autoplay=1" frameborder="1" allowfullscreen></iframe>
 
 <h2> TENERIFE: </h2>
-<img id="tenerife" src="tenerife.jpg">
+<img id="tenerife" src="Tenerife.jpg">
 <br><br>
 <p> Beautiful Tenerife is the largest of the seven Canary Islands, which form this Atlantic Ocean archipelago. Tenerife’s vibrant capital city Santa Cruz comes alive every year in February or March with the arrival of the Carnival, considered to be one of the largest in the world.The wonderful climate draws people to the island all year round.Whether you are interested in water sports, chilling out on the beach, the endemic plant life of the island, discovering hidden gems, exploring typical Canarian villages, culture, events or taking a cable car to Spain’s highest peak</p>
 
